[package]
name = "playtime"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
dirs2 = "3.0.1"
jiff = { version = "0.1.14", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
toml = "0.8.19"
